Fix mobile slideshow image overflow in Forest Souvenirs slide 3
Constrain .sr-slideshow-img to fit within the 55vh container on mobile
instead of inheriting the desktop max-height of 90vh.

--- a/css/style.css
+++ b/css/style.css
@@ -1285,6 +1285,11 @@ body.slide-fullframe .slide-5-overlay {
     padding: var(--border);
   }
 
+  .slide-stack-right--slideshow .sr-left .sr-slideshow-img {
+    max-height: calc(55vh - 2 * var(--border));
+    max-width: calc(100% - 2 * var(--border));
+  }
+
   .sr-right {
     flex: none;
     width: 100%;
